<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/2002/xmlspec/dtd/2.10/xmlspec.dtd">
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.web</groupId>
  <artifactId>myapp</artifactId>
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>myapp Maven Webapp</name>
  <url>http://maven.apache.org</url>
  
  <properties>
  	<webapp.name>myapp</webapp.name>
    <!-- spring版本号 -->  
    <spring.version>4.3.2.RELEASE</spring.version>  
    <!-- mybatis版本号 -->  
    <mybatis.version>3.2.6</mybatis.version>
    <jdk.version>1.8</jdk.version>
	<jstl.version>1.2</jstl.version>
	<druid.version>1.0.9</druid.version>
	<junit.version>4.10</junit.version>
	<log4j.version>1.2.17</log4j.version>
	<slf4j.version>1.6.6</slf4j.version>
	<jackson.version>1.9.5</jackson.version>
	<commons-lang3.version>3.1</commons-lang3.version>
	<commons-io.version>2.4</commons-io.version>
	<commons-codec.version>1.3</commons-codec.version>
	<commons-fileupload.version>1.3</commons-fileupload.version>
	<commons-beanutils.version>1.8.3</commons-beanutils.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <jvmargs>-XX:MaxPermSize=256m -Xms512m -Xmx1024m</jvmargs>
  </properties>
  
  <dependencies>
  
  	<!-- 集成服务 -->
    <!-- quartz作业调度 -->
    <dependency>  
	    <groupId>org.quartz-scheduler</groupId>  
	    <artifactId>quartz</artifactId>  
	    <version>1.8.6</version>  
	</dependency>
	<!-- WebService -->
	<dependency>
		<groupId>axis</groupId>
		<artifactId>axis</artifactId>
		<version>1.4</version>
	</dependency>
	
  	<!-- 框架配置 -->
    <!-- mybatis核心组件 -->  
    <dependency>  
        <groupId>org.mybatis</groupId>  
        <artifactId>mybatis</artifactId>  
        <version>${mybatis.version}</version>  
    </dependency>  
    <!-- mybatis/spring集成 -->  
    <dependency>  
        <groupId>org.mybatis</groupId>  
        <artifactId>mybatis-spring</artifactId>  
        <version>1.2.2</version>  
    </dependency>
    <!-- 自动生成mybatis单表操作bean和xml -->
	<dependency>
		<groupId>org.mybatis.generator</groupId>
		<artifactId>mybatis-generator-core</artifactId>
		<version>1.3.2</version>
		<scope>compile</scope>
	</dependency>
    <!-- spring核心组件 -->  
    <dependency>  
        <groupId>org.springframework</groupId>  
        <artifactId>spring-aop</artifactId>  
        <version>${spring.version}</version>  
    </dependency>  
    <dependency>  
        <groupId>org.springframework</groupId>  
        <artifactId>spring-context-support</artifactId>  
        <version>${spring.version}</version>  
    </dependency>  
    <dependency>  
        <groupId>org.springframework</groupId>  
        <artifactId>spring-core</artifactId>  
        <version>${spring.version}</version>  
    </dependency>  
    <dependency>  
        <groupId>org.springframework</groupId>  
        <artifactId>spring-jdbc</artifactId>  
        <version>${spring.version}</version>  
    </dependency>  
    <dependency>  
        <groupId>org.springframework</groupId>  
        <artifactId>spring-oxm</artifactId>  
        <version>${spring.version}</version>  
    </dependency>  
    <dependency>  
        <groupId>org.springframework</groupId>  
        <artifactId>spring-test</artifactId>  
        <version>${spring.version}</version>  
    </dependency>
    <dependency>  
        <groupId>org.springframework</groupId>  
        <artifactId>spring-tx</artifactId>  
        <version>${spring.version}</version>  
    </dependency>  
    <dependency>  
        <groupId>org.springframework</groupId>  
        <artifactId>spring-web</artifactId>  
        <version>${spring.version}</version>  
    </dependency>  
    <dependency>  
        <groupId>org.springframework</groupId>  
        <artifactId>spring-webmvc</artifactId>  
        <version>${spring.version}</version>  
    </dependency>  
    
    <!-- servlet api -->
	<dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>javax.servlet-api</artifactId>
		<version>3.1.0</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>javax.servlet.jsp</groupId>
		<artifactId>javax.servlet.jsp-api</artifactId>
		<version>2.3.1</version>
		<scope>provided</scope>
	</dependency>
	
	<!-- spring-mvc映射POJO对象使用的json类库 -->
	<dependency>
		<groupId>org.codehaus.jackson</groupId>
		<artifactId>jackson-core-lgpl</artifactId>
		<version>${jackson.version}</version>
	</dependency>
	<dependency>
		<groupId>org.codehaus.jackson</groupId>
		<artifactId>jackson-core-asl</artifactId>
		<version>${jackson.version}</version>
	</dependency>
	<dependency>
		<groupId>org.codehaus.jackson</groupId>
		<artifactId>jackson-mapper-asl</artifactId>
		<version>${jackson.version}</version>
	</dependency>
	<dependency>
		<groupId>org.codehaus.jackson</groupId>
		<artifactId>jackson-mapper-lgpl</artifactId>
		<version>${jackson.version}</version>
	</dependency>
	<dependency>
		<groupId>com.fasterxml.jackson.core</groupId>
		<artifactId>jackson-databind</artifactId>
		<version>2.8.0</version>
	</dependency>
	
	<!-- aop代理 -->
	<dependency>
		<groupId>asm</groupId>
		<artifactId>asm</artifactId>
		<version>3.3.1</version>
	</dependency>
	<dependency>
		<groupId>org.aspectj</groupId>
		<artifactId>aspectjrt</artifactId>
		<version>1.7.4</version>
	</dependency>
	<dependency>
		<groupId>org.aspectj</groupId>
		<artifactId>aspectjweaver</artifactId>
		<version>1.7.2</version>
	</dependency>

  	<!-- 服务器组件 -->
	<dependency>
	    <groupId>redis.clients</groupId>
	    <artifactId>jedis</artifactId>
	    <version>2.8.0</version>
	</dependency>
  
  
  	<!-- 数据源组件 -->
  	<dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>5.1.20</version>
	</dependency>
	<!-- DataSource -->
	<dependency>
		<groupId>c3p0</groupId>
		<artifactId>c3p0</artifactId>
		<version>0.9.1.2</version>
	</dependency>
	<dependency>
		<groupId>commons-dbcp</groupId>
		<artifactId>commons-dbcp</artifactId>
		<version>1.2.2</version>
	</dependency>
	<!-- 阿里巴巴数据源包 -->
	<dependency>
	    <groupId>com.alibaba</groupId>
	    <artifactId>druid</artifactId>
	    <version>1.0.24</version>
	</dependency>

		
	<!-- 模板组件 -->
	<dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>jstl</artifactId>
		<version>${jstl.version}</version>
	</dependency>
	
	<!-- XML文档解析 -->
	<dependency>
        <groupId>dom4j</groupId>
        <artifactId>dom4j</artifactId>
        <version>1.6.1</version>
    </dependency>
	<dependency>
	    <groupId>sax</groupId>
	    <artifactId>sax</artifactId>
	    <version>2.0.1</version>
	</dependency>
	<dependency>
	  <groupId>net.sf.kxml</groupId>
	  <artifactId>kxml2</artifactId>
	  <version>2.1.7</version>
	</dependency>
	
	<!-- 通用编码解码包 -->
	<dependency>
		<groupId>commons-codec</groupId>
		<artifactId>commons-codec</artifactId>
		<version>${commons-codec.version}</version>
	</dependency>
	
	
	<!-- json组件 -->
	<dependency>
	    <groupId>com.alibaba</groupId>
	    <artifactId>fastjson</artifactId>
	    <version>1.1.34</version>
	</dependency>
	<dependency>
	    <groupId>com.google.code.gson</groupId>
	    <artifactId>gson</artifactId>
	    <version>2.2.3</version>
	</dependency>
    <dependency>
		<groupId>net.sf.json-lib</groupId>
		<artifactId>json-lib</artifactId>
		<classifier>jdk15</classifier>
		<version>2.4</version>
	</dependency>
	
	
	<!-- 测试组件 -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
	<dependency>
	    <groupId>org.junit</groupId>
	    <artifactId>junit5-api</artifactId>
	    <version>5.0.0-ALPHA</version>
	</dependency>
	
	
	<!-- 功能组件 -->
	
	<!-- 条形码 -->
	<dependency>
	    <groupId>net.sf.barcode4j</groupId>
	    <artifactId>barcode4j</artifactId>
	    <version>2.1</version>
	</dependency>
	<!-- 二维码 -->
	<dependency>
	    <groupId>net.glxn.qrgen</groupId>
	    <artifactId>javase</artifactId>
	    <version>2.0</version>
	</dependency>
	
	<!-- 极光推送 -->
	<dependency>
		<groupId>cn.jpush.api</groupId>
		<artifactId>jpush-client</artifactId>
		<version>3.2.3</version>
	</dependency>
	
  	<!-- poi -->
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi</artifactId>
	    <version>3.14</version>
	</dependency>
	
	
	<!-- 日志组件 -->
	<dependency>
	  <groupId>net.sf.jacob-project</groupId>
	  <artifactId>jacob</artifactId>
	  <version>1.14.3</version>
	</dependency>
	<dependency>
        <groupId>log4j</groupId>
        <artifactId>log4j</artifactId>
        <version>${log4j.version}</version>
    </dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-nop</artifactId>
		<version>${slf4j.version}</version>
	</dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>log4j-over-slf4j</artifactId>
		<version>${slf4j.version}</version>
	</dependency>
    
	<!-- 上传组件包 -->
	<dependency>
		<groupId>commons-fileupload</groupId>
		<artifactId>commons-fileupload</artifactId>
		<version>${commons-fileupload.version}</version>
	</dependency>
	<dependency>
		<groupId>commons-beanutils</groupId>
		<artifactId>commons-beanutils</artifactId>
		<version>${commons-beanutils.version}</version>
		<exclusions>
			<exclusion>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
			</exclusion>
		</exclusions>
	</dependency>
	<!-- Commons Util -->
	<dependency>
		<groupId>commons-attributes</groupId>
		<artifactId>commons-attributes-api</artifactId>
		<version>2.1</version>
		<exclusions>
			<exclusion>
				<groupId>ant</groupId>
				<artifactId>ant</artifactId>
			</exclusion>
		</exclusions>
	</dependency>
	<dependency>
		<groupId>commons-betwixt</groupId>
		<artifactId>commons-betwixt</artifactId>
		<version>0.8</version>
	</dependency>
	<dependency>
		<groupId>commons-cli</groupId>
		<artifactId>commons-cli</artifactId>
		<version>1.1</version>
	</dependency>
	<dependency>
		<groupId>commons-collections</groupId>
		<artifactId>commons-collections</artifactId>
		<version>3.2</version>
	</dependency>
	<dependency> 
		<groupId>commons-digester</groupId>
		<artifactId>commons-digester</artifactId>
		<version>1.8</version>
	</dependency>
	<dependency>
		<groupId>commons-el</groupId>
		<artifactId>commons-el</artifactId>
		<version>1.0</version>
	</dependency>
	<dependency>
		<groupId>commons-httpclient</groupId>
		<artifactId>commons-httpclient</artifactId>
		<version>3.0.1</version>
	</dependency>
	<dependency>
		<groupId>commons-io</groupId>
		<artifactId>commons-io</artifactId>
		<version>2.0.1</version>
	</dependency>
	<dependency>
		<groupId>commons-lang</groupId>
		<artifactId>commons-lang</artifactId>
		<version>2.4</version>
	</dependency>
  </dependencies>
  
   	<!-- 另外一种激活方式 -->
   	<!-- 
	<profiles>
	    <profile>
	        <id>jdk-1.8</id>
	        <activation>
	           <activeByDefault>true</activeByDefault>
	           <jdk>1.8</jdk>
	        </activation>
	        <properties>
	            <maven.compiler.source>1.8</maven.compiler.source>
	            <maven.compiler.target>1.8</maven.compiler.target>
				<maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
	        </properties>
	    </profile>
	</profiles>
	 -->
  
  <build>
	  <plugins>
	  	<!-- maven编译器 -->
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.3</version>
			<configuration>
				<source>${jdk.version}</source>
				<target>${jdk.version}</target>
			</configuration>
		</plugin>
	
		<!-- embedded Jetty server, for testing -->
		<plugin>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-maven-plugin</artifactId>
			<version>9.2.11.v20150529</version>
			<configuration>
				<!-- <webAppSourceDirectory>${project.basedir}/src/main/webapp</webAppSourceDirectory> -->
				<!-- 在一定时间间隔内在扫描web应用检查是否有改变，如果发觉有任何改变则自动热部署。默认为0，表示禁用热部署检查。任何一个大于0的数字都将表示启用。 -->
				<scanIntervalSeconds>10</scanIntervalSeconds>
				<webApp>
					<!-- 这个contex地址指向webapp.默认情况下，它被设置成该项目的pom.xml的<artifactId>。当然你也可以设置一个你喜欢的从而覆盖它。 -->
					<contextPath>/${webapp.name}</contextPath>
					<!-- 
					<descriptor>${project.basedir}/src/main/webapp/WEB-INF/web.xml</descriptor> 
					<jettyEnvXml>${project.basedir}/src/over/here/jetty-env.xml</jettyEnvXml> 
					-->
				</webApp>
				<!-- web应用编译的classes存放的路径。很少需要设置这个参数，其实可以在你的pom.xml用<build><outputDirectory>替代它。 -->
				<!-- <classesDirectory>${project.basedir}/somewhere/else</classesDirectory> -->
				<!-- 周期性的扫描除了插件自动扫描外的文件和文件夹列表。 -->
				<!-- 
				<scanTargets> 
					<scanTarget>src/mydir</scanTarget> 
					<scanTarget>src/myfile.txt</scanTarget> 
				</scanTargets> 
				-->
				<!-- 如果想扫描有一长串的额外文件，通过使用模式匹配表达式制定它们更加方便，
				它可以用来替代 <scanTargets>参数的枚举展示。这个参数包含一组<scanTargetPattern>。 
				每一个都是由一个<directory>和<includes>[或者<excludes>]参数来指定文件的匹配模式。 -->
				<!-- 
				<scanTargetPatterns> 
					<scanTargetPattern> 
					<directory>src/other-resources</directory> 
					<includes> 
						<include>**/*.xml</include> 
						<include>**/*.properties</include> 
					</includes> 
					<excludes> 
						<exclude>**/myspecial.xml</exclude> 
						<exclude>**/myspecial.properties</exclude> 
					</excludes> 
					</scanTargetPattern> 
				</scanTargetPatterns> 
				-->
				<httpConnector class="org.eclipse.jetty.server.ServerConnector">
					<port>8090</port>
				</httpConnector>
			</configuration>
		</plugin>
	
		<!-- configure Eclipse workspace -->
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-eclipse-plugin</artifactId>
			<version>2.9</version>
			<configuration>
				<downloadSources>true</downloadSources>
				<downloadJavadocs>true</downloadJavadocs>
				<wtpversion>2.0</wtpversion>
				<wtpContextName>${webapp.name}</wtpContextName>
			</configuration>
		</plugin>
	  </plugins>
	  <finalName>${webapp.name}</finalName>
  </build>
</project>
